# video_finder

./: .gitignore  CMakeLists.txt  readme.md
src/: basic.h  cimg_test.cpp  compute_hash.cpp  compute_hash.h  finder.cpp  finder.h  io_affairs.h  io_test.cpp  merge_datasets.cpp  phash_test.cpp  video_affairs.h  video_affairs.h_bak
